--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,11 @@
 	"dependencies": {
 		"@radix-ui/react-scroll-area": "^1.2.3",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-toggle": "^1.1.2",
+		"@radix-ui/react-toggle-group": "^1.1.2",
+		"@tsparticles/engine": "^3.8.1",
+		"@tsparticles/react": "^3.0.0",
+		"@tsparticles/slim": "^3.8.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.474.0",
