--- a/client/package.json
+++ b/client/package.json
@@ -4,28 +4,43 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.10.0",
+		"@radix-ui/react-alert-dialog": "^1.1.6",
+		"@radix-ui/react-aspect-ratio": "^1.1.2",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-scroll-area": "^1.2.3",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-toast": "^1.2.6",
 		"@radix-ui/react-toggle": "^1.1.2",
 		"@radix-ui/react-toggle-group": "^1.1.2",
+		"@tabler/icons-react": "^3.29.0",
 		"@tsparticles/engine": "^3.8.1",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.8.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"input-otp": "^1.4.2",
 		"lucide-react": "^0.474.0",
 		"motion": "^12.3.1",
 		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.54.2",
 		"react-router-dom": "^7.1.5",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
