--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
 		"graphql-tag": "^2.12.6",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^6.10.0",
+		"otp-generator": "^4.0.1",
 		"qrcode": "^1.5.4",
 		"speakeasy": "^2.0.0"
 	},
@@ -32,6 +33,7 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^22.10.5",
 		"@types/nodemailer": "^6.4.17",
+		"@types/otp-generator": "^4.0.2",
 		"@types/qrcode": "^1.5.5",
 		"@types/speakeasy": "^2.0.10",
 		"env-cmd": "^10.1.0",
