--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"input-otp": "^1.4.2",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.474.0",
 		"motion": "^12.3.1",
 		"react": "^18.3.1",
