add .gitignore and update package.json files to include date-fns and new dependencies; enhance client and server configurations

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,12 +6,11 @@
 		"rootDirs": ["./src"],
 		"outDir": "./dist",
 		// "allowImportingTsExtensions": true,
-		// "composite": true,
 		// "emitDeclarationOnly": true,
 		"removeComments": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-
+		"baseUrl": ".",
 		"skipLibCheck": true,
 		"paths": {
 			"@/*": ["./src/*"]
