--- a/client/package.json
+++ b/client/package.json
@@ -7,19 +7,23 @@
 		"dev": "vite --host",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"serve": "vite preview"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.12.11",
 		"@hookform/resolvers": "^3.10.0",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-aspect-ratio": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-scroll-area": "^1.2.3",
+		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.6",
@@ -27,12 +31,14 @@
 		"@radix-ui/react-toggle-group": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tabler/icons-react": "^3.29.0",
+		"@tanstack/react-table": "^8.20.6",
 		"@tsparticles/engine": "^3.8.1",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.8.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
+		"generate-password-browser": "^1.1.0",
 		"input-otp": "^1.4.2",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.474.0",
