--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.3",
 		"@radix-ui/react-toast": "^1.2.6",
 		"@radix-ui/react-toggle": "^1.1.2",
 		"@radix-ui/react-toggle-group": "^1.1.2",
@@ -46,6 +47,7 @@
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.54.2",
 		"react-router-dom": "^7.1.5",
 		"tailwind-merge": "^3.0.1",
