--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.12.11",
+		"@cloudinary/react": "^1.13.1",
+		"@cloudinary/url-gen": "^1.21.0",
 		"@hookform/resolvers": "^3.10.0",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-aspect-ratio": "^1.1.2",
