--- a/client/package.json
+++ b/client/package.json
@@ -40,12 +40,14 @@
 		"@tsparticles/slim": "^3.8.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
 		"generate-password-browser": "^1.1.0",
 		"input-otp": "^1.4.2",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.474.0",
 		"motion": "^12.3.1",
+		"psgc": "^2.2.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
