--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,10 @@
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tabler/icons-react": "^3.29.0",
 		"@tanstack/react-table": "^8.20.6",
+		"@tiptap/extension-underline": "^2.11.5",
+		"@tiptap/pm": "^2.11.5",
+		"@tiptap/react": "^2.11.5",
+		"@tiptap/starter-kit": "^2.11.5",
 		"@tsparticles/engine": "^3.8.1",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.8.1",
