--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
 		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
 		"generate-password-browser": "^1.1.0",
+		"graphql-ws": "^5.16.2",
 		"input-otp": "^1.4.2",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.474.0",
