--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,6 +18,8 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"noUncheckedSideEffectImports": true,
+
+		"types": ["node"]
 	}
 }
