--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,17 +1,26 @@
 {
 	"compilerOptions": {
-		"target": "es6",
-		"module": "commonjs",
-		"strict": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"baseUrl": "./",
-		"outDir": "./dist",
+		"target": "es2016",
+		"module": "NodeNext",
 		"rootDir": "./src",
+		"rootDirs": ["./src"],
+		"outDir": "./dist",
+		// "allowImportingTsExtensions": true,
+		// "emitDeclarationOnly": true,
 		"removeComments": true,
-		"sourceMap": true
-	},
-	"include": ["src/**/*"]
-	// "exclude": ["node_modules", "dist"]
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"baseUrl": ".",
+		"skipLibCheck": true,
+		"paths": {
+			"@/*": ["./src/*"]
+		},
+
+		/* Linting */
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedSideEffectImports": true
+	}
 }
