--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
 		"generate-password-browser": "^1.1.0",
 		"graphql-ws": "^5.16.2",
 		"input-otp": "^1.4.2",
+		"jotai": "^2.12.1",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.474.0",
 		"motion": "^12.3.1",
