--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-dropzone": "^14.3.5",
+		"react-helmet": "^6.1.0",
 		"react-hook-form": "^7.54.2",
 		"react-router-dom": "^7.1.5",
 		"tailwind-merge": "^3.0.1",
@@ -70,6 +71,7 @@
 		"@types/node": "^22.13.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
+		"@types/react-helmet": "^6.1.11",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.15.0",
