--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-switch": "^1.1.3",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@radix-ui/react-toast": "^1.2.6",
 		"@radix-ui/react-toggle": "^1.1.2",
@@ -73,6 +74,7 @@
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@types/react-helmet": "^6.1.11",
+		"@types/uuid": "^10.0.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.15.0",
