--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-progress": "^1.1.2",
 		"@radix-ui/react-radio-group": "^1.2.3",
 		"@radix-ui/react-scroll-area": "^1.2.3",
 		"@radix-ui/react-select": "^2.1.6",
@@ -56,6 +57,7 @@
 		"lucide-react": "^0.474.0",
 		"motion": "^12.3.1",
 		"psgc": "^2.2.0",
+		"reacharts": "^0.4.5",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
@@ -63,6 +65,7 @@
 		"react-helmet": "^6.1.0",
 		"react-hook-form": "^7.54.2",
 		"react-router-dom": "^7.1.5",
+		"recharts": "^2.15.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.2",
