--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"@cloudinary/react": "^1.13.1",
 		"@cloudinary/url-gen": "^1.21.0",
 		"@hookform/resolvers": "^3.10.0",
+		"@loadable/component": "^5.16.4",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-aspect-ratio": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.1.3",
@@ -73,6 +74,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
+		"@types/loadable__component": "^5.13.9",
 		"@types/node": "^22.13.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
