--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
 		"recharts": "^2.15.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
+		"use-debounce": "^10.0.4",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.1"
 	},
